# trip-currency-local

./: .gitignore  DATABASE-SYNC-GUIDE.md  DEPLOYMENT-GUIDE.md  DEVELOPMENT-ENVIRONMENT-SETUP.md  EKS-DEPLOYMENT-GUIDE.md  Jenkinsfile.production  KAFKA-EVENTS.md  NETWORK-SETUP-GUIDE.md  PRODUCTION-DEPLOYMENT.md  PROMETHEUS_MONITORING_IMPLEMENTATION.md  README.md  docker-compose.yml  env.example  env.production  last_guide.md  requirements.txt  start-local.sh  test_integration.py  troubleshooting.md  ver1.md  운영환경에서의 명령어 모음.md  쿠버네티스 클러스터 리셋가이드.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/common/: BackgroundEffect.jsx  Footer.jsx  Header.jsx
frontend/src/components/country/: CountryCard.jsx  CountrySelector.jsx  ExchangeRateChart.jsx
frontend/src/components/currency/: ExchangeRateDisplay.jsx
frontend/src/components/map/: WorldMap.jsx
frontend/src/components/ranking/: RankingItem.jsx  RankingList.jsx
frontend/src/hooks/: useCurrencyData.js  useRankingData.js
frontend/src/pages/: ComparisonPage.jsx  HomePage.jsx
frontend/src/services/: api.js
frontend/src/styles/: globals.css
k8s/argocd/: application.yaml
k8s/base/: kustomization.yaml
k8s/base/ingress/: trip-service-ingress.yaml
k8s/base/ingress-controller/: nginx-controller.yaml
k8s/base/metallb/: ipaddresspool.yaml
k8s/base/services/currency-service/: deployment.yaml  service.yaml
k8s/base/services/dataingestor-service/: cronjob.yaml
k8s/base/services/frontend/: deployment.yaml  service.yaml
k8s/base/services/history-service/: deployment.yaml  service.yaml
k8s/base/services/ranking-service/: deployment.yaml  service.yaml
k8s/overlays/dev/: ingress-patch.yaml  kustomization.yaml
k8s/overlays/prod/: ingress-patch.yaml  kustomization.yaml
monitoring/: README.md  docker-compose.yml  k8s-ca.crt  k8s-token
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: kubernetes-cluster.json  trip-service.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
package-shared/: LICENSE
package-shared/shared/: __init__.py  config.py  database.py  setup.py  utils.py
package-shared/shared.egg-info/: PKG-INFO  requires.txt
scripts/: init-db.sql  init-kafka-topics.sh  init-mongodb.js  init_services.py  rebuild-all.ps1  rebuild-all.sh  start-dev-kube.ps1
service-currency/: Dockerfile  main.py  requirements.k8s.txt  requirements.txt
service-currency/app/services/: currency_provider.py
service-currency/package-shared/: messaging.py
service-currency/package-shared/shared/: logging.py  utils.py
service-dataingestor/: Dockerfile  main.py  requirements.txt
service-dataingestor/app/: scheduler.py
service-dataingestor/app/services/: data_collector.py  data_processor.py
service-dataingestor/package-shared/: README.md  setup.py
service-dataingestor/package-shared/shared/: build_package.py  database.py
service-dataingestor/package-shared/shared.egg-info/: SOURCES.txt
service-history/: Dockerfile  main.py  requirements.txt
service-history/app/services/: analysis_provider.py  history_provider.py
service-history/package-shared/: pyproject.toml
service-history/package-shared/shared/: __init__.py  models.py
service-ranking/: Dockerfile  main.py  requirements.txt
service-ranking/app/services/: mongodb_service.py  ranking_provider.py  scheduler_service.py  selection_recorder.py
service-ranking/package-shared/: DEPLOYMENT.md  MANIFEST.in
service-ranking/package-shared/shared/: config.py  exceptions.py
service-ranking/package-shared/shared.egg-info/: PKG-INFO  entry_points.txt
